--- a/refer-effect/gameEffect/cardGame.html
+++ b/refer-effect/gameEffect/cardGame.html
@@ -59,7 +59,43 @@
 
         /* suc */
         .success {
+            position : fixed;
+            left: 0; top: 0;
+            width: 100%;
+            height: 100vh;
+            backdrop-filter: blur(10px);
+            background:rgba(0,0,0,0.4);
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            z-index: 1000;
             display: none;
+        }
+        .success h2 {
+            font-family: 'CookieRun-Regular';
+            margin-bottom: 20px;
+            font-size: 6vw;
+            color : #fff;
+        }
+
+        .success .btn-continue {
+            font-family: 'CookieRun-Regular';
+            font-size: 2vw;
+            background: #000;
+            border : 0;
+            color : #fff;
+            padding: 1vw 4vw;
+            margin: 1vw;
+            cursor : pointer;
+            border-radius: 30px;
+            transition : all 0.3s;
+        }
+        .success .btn-continue:hover {
+            background: #fff;
+            color : #000;
+        }
+        .success.is-visible {
+            display: flex;
         }
 
 
@@ -84,9 +120,28 @@
             transition: all 0.6s;
             cursor : pointer;
         }
+        .cardWrap.is-disabled {
+            pointer-events: none;
+        }
         /* .cardWrap .card:hover {
             transform: rotateY(-180deg);
         } */
+
+        /* 카드가 선택 되었을때 */
+        .card .is-selected {
+            transform : rotateY(-180deg);
+        }
+
+        /* 카드가 일치할 때 */
+        .card[data-matched=true]{
+            animation: matchSuccess 0.4s ease-out 3 forwards;
+        }
+        @keyframes matchSuccess {
+            0% {transform: rotateY(180deg) scale(1);}
+            50% {transform: rotateY(180deg) scale(1.05);}
+            100% {transform: rotateY(180deg) scale(1);}
+        }
+
         .cardWrap .card > div {
             position: absolute;
             left: 0; top: 0;
@@ -165,79 +220,79 @@
                 <p class="attempts">시도 : <span>0</span></p>
                 <p class="wins">우승 : <span>0</span></p>
             </div>
-            <button class="class-continue">다시 도전하기</button>
+            <button class="btn-continue">다시 도전하기</button>
         </div>
 
         <section class="cardWrap">
-            <div class="card" data-type="img1">
+            <div class="card" data-type="img1" data-matched="false">
                 <div class="front"></div>
                 <div class="back">1</div>
             </div>
-            <div class="card" data-type="img1">
+            <div class="card" data-type="img1" data-matched="false">
                 <div class="front"></div>
                 <div class="back">1</div>
             </div>
-            <div class="card" data-type="img2">
+            <div class="card" data-type="img2" data-matched="false">
                 <div class="front"></div>
                 <div class="back">2</div>
             </div>
-            <div class="card" data-type="img2">
+            <div class="card" data-type="img2" data-matched="false"> 
                 <div class="front"></div>
                 <div class="back">2</div>
             </div>
-            <div class="card" data-type="img3">
+            <div class="card" data-type="img3" data-matched="false">
                 <div class="front"></div>
                 <div class="back">3</div>
             </div>
-            <div class="card" data-type="img3">
+            <div class="card" data-type="img3" data-matched="false">
                 <div class="front"></div>
                 <div class="back">3</div>
             </div>
-            <div class="card" data-type="img4">
+            <div class="card" data-type="img4" data-matched="false">
                 <div class="front"></div>
                 <div class="back">4</div>
             </div>
-            <div class="card" data-type="img4">
+            <div class="card" data-type="img4" data-matched="false">
                 <div class="front"></div>
                 <div class="back">4</div>
             </div>
-            <div class="card" data-type="img5">
+            <div class="card" data-type="img5" data-matched="false">
                 <div class="front"></div>
                 <div class="back">5</div>
             </div>
-            <div class="card" data-type="img5">
+            <div class="card" data-type="img5" data-matched="false">
                 <div class="front"></div>
                 <div class="back">5</div>
             </div>
-            <div class="card" data-type="img6">
+            <div class="card" data-type="img6" data-matched="false">
                 <div class="front"></div>
                 <div class="back">6</div>
             </div>
-            <div class="card" data-type="img6">
+            <div class="card" data-type="img6" data-matched="false">
                 <div class="front"></div>
                 <div class="back">6</div>
             </div>
-            <div class="card" data-type="img7">
+            <div class="card" data-type="img7" data-matched="false">
                 <div class="front"></div>
                 <div class="back">7</div>
             </div>
-            <div class="card" data-type="img7">
+            <div class="card" data-type="img7" data-matched="false">
                 <div class="front"></div>
                 <div class="back">7</div>
             </div>
-            <div class="card" data-type="img8">
+            <div class="card" data-type="img8" data-matched="false">
                 <div class="front"></div>
                 <div class="back">8</div>
             </div>
-            <div class="card" data-type="img8">
+            <div class="card" data-type="img8" data-matched="false">
                 <div class="front"></div>
                 <div class="back">8</div>
             </div>
-            <div class="card" data-type="img9">
+            <div class="card" data-type="img9" data-matched="false">
                 <div class="front"></div>
                 <div class="back">9</div>
             </div>
-            <div class="card" data-type="img9">
+            <div class="card" data-type="img9" data-matched="false">
                 <div class="front"></div>
                 <div class="back">9</div>
             </div>
@@ -248,12 +303,25 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
 
-        const $btnSound = $(".btn-sound");
+        const $cardWrap = $(".cardWrap"),
+              $card = $(".card"),
+              $btnSound = $(".btn-sound"),
               $themeSong = $("#theme-song")[0],
+              $success = $(".success"),
+              $successMsg = $(".success .msg"),
+              $btnContinue = $(".btn-continue"),
+              $turns = $(".turns span"),
+              $wins = $("wins span"),
+              $attempts = $(".attemps span");
 
 
               dataType = "data-type",
-              selectedClass = "is-selected";          
+              dataMatch = "data-matched",
+              selectedClass = "is-selected",
+              playSoundClass = "is-playing",
+              visibleClass = "is-visible",
+              playStop = "is-disabled",
+              timeoutLength = 900;        
 
         let sound = [
             "../assets/audio/wrong.mp3",
@@ -261,8 +329,12 @@
             "../assets/audio/right.mp3",
         ],
             soundMatch = new Audio(sound[2]),
-            soundNoMatch = new Audio(sound[0])
-            soundSuccess = new Audio(sound[1])
+            soundNoMatch = new Audio(sound[0]),
+            soundSuccess = new Audio(sound[1]),
+            turnsCount = 5, // 기회
+            attempsCount = 0, // 시도
+            winCount = 0, // 우승 횟수
+            card1 , card2 , msg;
         
         //음악 audio 버튼을 클릭하면 꺼지고 , 클릭하면 켜지고.
         $btnSound.on("click" , function(){
@@ -277,6 +349,137 @@
             } else {
                 $themeSong.pause();
             }
+        })
+
+        //ㅋㅏ드를 클ㅣ하ㄴ select 추가
+        $card.click(function(){
+            // dataMatched == false 면 클릭한 카드의 isSelected 추가
+            if( $(this).attr(dataMatch) == false ){
+                $(this).addClass(selectedClass);
+            } //selected가 붙으면 카드를 뒤집음
+
+
+            let selectedCards = $("." + selectedClass);
+            //카드 1과 카드 2가 같다면
+
+            if(selectedCards.length == 2 ){
+                $cardWrap.addClass(playStop);
+                card1 = selectedCards.eq(0).attr(dataType);
+                card2 = selectedCards.eq(1).attr(dataType);
+
+
+                //같으면 true
+                if( card1 == card2 ){
+                    selectedCards.attr(dataMatch, true).removeClass(selectedClass);
+                    $cardWrap.removeClass(playStop);
+
+                    //성공음악 재생 , 음악 off -> 재생 x
+                    if($btnSound.hasClass(playSoundClass)){
+                        soundMatch.play();
+                    }
+
+
+                } else { // 같지 않으면 그대로
+                    if($btnSound.hasClass(playSoundClass)){
+                        soundNoMatch.play();
+                    }
+
+                    setTimeout(function(){
+                        turnsCount--; //  틀릴때 기회 차감
+                        $turns.html(turnsCount);
+                        selectedCards.removeClass(selectedClass);
+                    }, timeoutLength);
+
+                    //기회가 없을 때 시도+ 1 기회+ 5
+                    if( turnsCount <= 0 ){
+                        turnsCount = 5;
+                        attempsCount++;
+                        $attempts.html(attempsCount);
+                        $card.attr(dataMatch, false); //모든 카드를 초기화
+                    }
+                }
+            }
+
+            //dataMatch 의 갯수 == 전체 카ㅏ드 갯수 : 성공음악 추가 , 우승 + 1 , 성공 메세지
+
+            if($('[' + dataMatch + '="true"]').length  == $card.length ){
+                setTimeout(function(){
+                    // 성공 메세지
+                    $success.addClass(visibleClass);
+
+                    if($btnSound.hasClass(playSoundClass)){
+                        soundSuccess.play();
+                    }
+
+                }, timeoutLength);
+
+                //clear Massage
+                switch(true){
+                    case 0 :
+                        msg = "레벨 1 정말 잘하시네요!!";
+                        break;
+                    case 1:
+                        msg = "레벨 2 나쁘지 않습니다!!";
+                        break;
+                    case 2 :
+                        msg = "레벨 3 아쉽습니다!!";
+                        break;
+                    case 3 :
+                        msg = "레벨 4 분발 하세요!!";
+                        break;
+                    case 4 :
+                        msg = "레벨 5 안타깝습니다...!!";
+                        break;
+                    default :
+                        msg = "ㅠ.ㅠ";
+                }
+                successMsg.text(msg);
+            }
+
+
+            //다시 시작
+            $btnContinue.on("click" , function(){
+                $success.removeClass(visibleClass)
+                shuffleCards();
+                turnsCount = 5;
+                attempsCount = 0;
+                $attempts.html(attempsCount);
+                $turns.html(turnsCount);
+            });
+
+            //카드 섞기
+            function shuffleCards(){
+                $card.attr(dataMatch, false);
+
+                // var num = [1,2,3,4,5,6,7,8,9];
+                // var remove = num.splice(3,1);
+                // var remove = num.splice(4,1);
+                // var remove = num.splice(1,1);
+                // var remove = num.splice(6,1);
+                // var remove = num.splice(7,1);
+                // var remove = num.splice(8,1);
+                // var remove = num.splice(2,1);
+                // var remove = num.splice(5,1);
+
+                let cards = $cardWrap.children();
+                while(cards.length){
+                    $cardWrap.append(cards.splice(Math.floor(Math.random()*cards.length), 1)[0] )
+                }
+
+
+                $card.each(function(index){
+                    setTimeout(() => {
+                        $(this).addClass(selectedClass)
+                    }, 200 * index)
+                });
+
+                setTimeout(() => {
+                    $card.removeClass(selectedClass);
+                }, 4000)
+            }
+
+            //카드 섞기 및 시작하기
+            shuffleCards();
         })
     </script>
 </body>
