--- a/refer-effect/gameEffect/cardGame01.html
+++ b/refer-effect/gameEffect/cardGame01.html
@@ -427,19 +427,19 @@
                 //완성 메세지
                 switch(attempsCount){
                     case 0 :
-                        msg = "레벨1.... 최고의 실력입니다. 머리가 좋네요!!";
+                        msg = "레벨1 매우 잘하시네요!!!!!!!!";
                         break;
                     case 1 :
-                        msg = "레벨2... 그럭저럭 하네요~~~";
+                        msg = "레벨1 매우 잘하시네요!!!!!!!!";
                         break;
                     case 2 :
-                        msg = "레벨3... 머리가 나쁘네요~~~~~";
+                        msg = "레벨1 매우 잘하시네요!!!!!!!!";
                         break;
                     case 3 :
-                        msg = "레벨4... 진짜 못하네~~~~~";
+                        msg = "레벨1 매우 잘하시네요!!!!!!!!";
                         break;
                     default :
-                        msg = "^**^";
+                        msg = "레벨1 매우 잘하시네요!!!!!!!!";
                 }
                 $successMsg.text(msg);
             }
