--- a/refer-effect/parallaxEffect/parallaxApple.html
+++ b/refer-effect/parallaxEffect/parallaxApple.html
@@ -550,7 +550,7 @@
         <style>
             .s4Text1 {}
             .s4Text1 > div {
-                background: rgb(233, 243, 174);
+                background: rgb(174, 233, 243);
                 border-radius: 50%;
             }
             .s4Text1 .circle1 {
@@ -575,7 +575,6 @@
 
             .s4Text2  {
                 font-size: 5vw;
-                text-transform: uppercase;
                 color : rgb(241, 112, 161);
             }
             .s4Text2 .ani1 {
@@ -592,7 +591,7 @@
                 position: absolute;
                 right: 0; top: 0;
                 transform : translate(35.9vw, -25vw);
-                border : 1px solid #000;
+                background: #000;
                 width: 35vw; height: 40vh;
             }
 
@@ -601,7 +600,7 @@
             <div class="s4Text1"
                 data-39999 = "display: none"
                 data-40000 = "display: block"
-                data-43000 = "display: block"
+                data-41500 = "display: block"
             >
                 <div class="circle1 fixed"
                     data-40000="width: 0vw; height: 0vw;"
@@ -609,41 +608,41 @@
                 ></div>
                 <div class="circle2 fixed"
                     data-40050="width: 0vw; height: 0vw;"
-                    data-42000="width: 200vw; height: 200vw;"
+                    data-41500="width: 200vw; height: 200vw;"
                 ></div>
                 <div class="circle3 fixed"
                     data-40100="width: 0vw; height: 0vw;"
-                    data-43000="width: 200vw; height: 200vw;"
+                    data-41500="width: 200vw; height: 200vw;"
                 ></div>
                 <div class="circle4 fixed"
                     data-40150="width: 0vw; height: 0vw;"
-                    data-43000="width: 200vw; height: 200vw;"
+                    data-41500="width: 200vw; height: 200vw;"
                 ></div>
                 <div class="circle5 fixed"
                     data-40200="width: 0vw; height: 0vw;"
-                    data-43000="width: 200vw; height: 200vw;"
+                    data-41500="width: 200vw; height: 200vw;"
                 ></div>
                 <div class="circle6 fixed"
                     data-40250="width: 0vw; height: 0vw;"
-                    data-43000="width: 200vw; height: 200vw;"
+                    data-41500="width: 200vw; height: 200vw;"
                 ></div>
             </div>
             <div class="s4Text2 fixed"
-                data-43500 = "opacity : 0;"
-                data-44000 = "opacity : 1;"
-                data-46500 = "opacity : 0;"
+                data-41500 = "opacity : 0;"
+                data-42000 = "opacity : 1;"
+                data-42500 = "opacity : 0;"
               
             >
                 animation 
                 <div class="ani1"
-                    data-44500 = "transform : translate(-35.9vw, 40vw);"
-                    data-46000 = "transform : translate(-35.9vw, -40vw);"
+                    data-41500 = "transform : translate(-35.9vw, 40vw);"
+                    data-42500 = "transform : translate(-35.9vw, -40vw);"
                 >
                     <div class="box"></div>
                 </div> 
                 <div class="ani2"
-                    data-44500 = "transform : translate(35.9vw, -40vw);"
-                    data-46000 = "transform : translate(35.9vw, 40vw);"
+                    data-41500 = "transform : translate(35.9vw, -40vw);"
+                    data-42500 = "transform : translate(35.9vw, 40vw);"
                 ></div> 
                 <div class="ani3"></div> 
             </div>
