--- a/refer-effect/parallaxEffect/parallaxApple.html
+++ b/refer-effect/parallaxEffect/parallaxApple.html
@@ -92,7 +92,10 @@
             height: 17000px;
             z-index: 4000;
         }
-        #section5 {}
+        #section5 {
+            height: 10000px;
+            z-index: 5000;
+        }
         #section6 {}
         #section7 {}
         img {
@@ -919,13 +922,22 @@
                 background: rgb(47, 101, 110);
                 width: 35vw; height: 65vh;
             }
-
+            .s4Text3 {
+                color : #fff;
+                background: #000;
+                width: 10vw; height: 10vw;
+                font-size: 3vw;
+                transform : translate(-50% , -50%);
+                position: absolute;
+                left: 50%; top: 50%;
+            }
         </style>
         <section id="section4">
             <div class="s4Text1"
                 data-39999 = "display: none"
                 data-40000 = "display: block"
                 data-41500 = "display: block"
+                data-42501 = "display: none"
             >
                 <div class="circle1 fixed"
                     data-40000="width: 0vw; height: 0vw;"
@@ -1004,13 +1016,20 @@
                         </div>
                         <div class="sub-planet"></div>
                     </div>
-                    </div> 
-                    <div class="ani3"></div> 
+                </div>
             </div>
         </section> 
         <!-- //section4 -->
 
-        <section id="section5"></section> <!-- //section5 -->
+
+        <style>
+            .s5Text1 {}
+        </style>
+        <section id="section5">
+            <div class="s5Text1">
+                <h4>Want to see more?</h4>
+            </div>
+        </section> <!-- //section5 -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script>
