--- a/index.html
+++ b/index.html
@@ -131,12 +131,10 @@
                     </div>
                     <div class="header_icon">
                         <ul>
-                            <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i><span>twitter</span></a></li>
-                            <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i><span>codepen</span></a></li>
-                            <li><a href="https://github.com/webstoryboy" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>github</span></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
+                            <li><a href="https://codepen.io/low1ife" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i><span>codepen</span></a></li>
+                            <li><a href="https://github.com/low1ife" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>github</span></a></li>
+                            <li><a href="https://www.youtube.com/user/zilioner83" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
                             <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble" aria-hidden="true"></i><span>dribbble</span></a></li>
-                            <li><a href="https://www.instagram.com/webstoryboy/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>instagram</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -149,7 +147,7 @@
     <!-- contents_tit -->
     <div id="contents_tit">
         <div class="titt">
-            <p><a href="#" class="tit_btn">&quot;나는 김우석이다&quot;</a></p>
+            <p><a href="#" class="tit_btn">&quot;김우석 입니다!!!!&quot;</a></p>
         </div>
     </div>
     <!-- //contents_tit -->
