--- a/Memo.html
+++ b/Memo.html
@@ -1,21 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dd</title>
-</head>
+ &lt;!-- contents --&gt;
+ &lt;main&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
 
-    
-
-<body>
-    <script>
-        let age = 24;
-        let name = "wooseok";
-
-        document.write(`저는 ${name}이고 나이는 ${age}살 입니다.`);
-        
-    </script>
-</body>
-</html>
+    &lt;article class="mouseCont"&gt;
+        &lt;p&gt;&lt;em&gt;Love&lt;/em&gt; asks me no questions, and gives me endless support.&lt;/p&gt;
+        &lt;h2&gt;&lt;em&gt;사랑은&lt;/em&gt; 내게 질문하지 않으며, 다만 끝없는 지지를 준다.&lt;/h2&gt;
+    &lt;/article&gt;
+    &lt;div class="box-wrap"&gt;
+        &lt;div class="box-item two"&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+   
+&lt;/main&gt;
+&lt;!-- contents --&gt;
