--- a/refer-effect/gameEffect/cardGame01.html
+++ b/refer-effect/gameEffect/cardGame01.html
@@ -21,6 +21,12 @@
             font-weight: normal;
             font-style: normal;
         }
+        @font-face {
+            font-family: 'CookieRun-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/CookieRun-Regular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
         /* reset */
         * {
             margin: 0; 
@@ -35,7 +41,7 @@
         }
 
         body {
-            background: #E5F2FE;
+            background: rgb(216, 204, 226);
         }
 
         /* title */
@@ -44,12 +50,12 @@
             left: 20px; top: 20px;
         }
         .title h1 {
-            font-family: 'Cafe24Ssurround';
+            font-family: 'CookieRun-Regular';
             margin-bottom: 20px;
             font-size: 50px;
         }
         .score {
-            font-family: 'Cafe24SsurroundAir';
+            font-family: 'CookieRun-Regular';
             font-size: 30px;
         }
         .score p {
@@ -122,10 +128,10 @@
             left: 50%; top: 50%;
             transform: translate(-50%, -50%);
             perspective:  600px;
-            border: 6px solid #000;
+            border: 6px solid rgb(169, 236, 245);
             border-radius: 1vw;
             padding: 1vw;
-            background-color: #dbf8ef;
+            background-color: rgb(225, 230, 204);
         }
         .cardWrap.is-disabled {
             pointer-events: none;
@@ -160,7 +166,7 @@
             left: 0; top: 0;
             width: 100%; height: 100%;
             border-radius: .4vw;
-            background-color: #bee2d7;
+            background-color: #e6f1c2;
             backface-visibility: hidden;
             background-position: center;
             background-repeat: no-repeat;
@@ -175,34 +181,34 @@
 
         /* card img */
         .cardWrap .card .front {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/desert.svg);
+            background-image: url(../assets/img/sun.png);
         }
         .card[data-type=img1] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/rhinoceros.svg);
+            background-image: url(../assets/img/potato.png);
         }
         .card[data-type=img2] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/gorila.svg);
+            background-image: url(../assets/img/garlic.png);
         }
         .card[data-type=img3] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/hyena.svg);
+            background-image: url(../assets/img/broccoli.png);
         }
         .card[data-type=img4] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/cheetah.svg);
+            background-image: url(../assets/img/steak.png);
         }
         .card[data-type=img5] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/tiger.svg);
+            background-image: url(../assets/img/tomato.png);
         }
         .card[data-type=img6] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/hippopotamus.svg);
+            background-image: url(../assets/img/bee\ \(1\).png);
         }
         .card[data-type=img7] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/lion.svg);
+            background-image: url(../assets/img/pig.png);
         }
         .card[data-type=img8] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/black-panther.svg);
+            background-image: url(../assets/img/rabbit.png);
         }
         .card[data-type=img9] .back {
-            background-image: url(http://silvery92.dothome.co.kr/assets/img/wolf.svg);
+            background-image: url(../assets/img/mushroom.png);
         }
     </style>
 </head>
