--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -25,6 +25,9 @@
             <li><a href="quiz/quiz02.html">2</a></li>
             <li><a href="quiz/quiz03.html">3</a></li>
             <li><a href="quiz/quiz04.html">4</a></li>
+            <li><a href="quiz/quiz05.html">5</a></li>
+            <li><a href="cardGame01.html">6</a></li>
+            <li><a href="searchGame.html">7</a></li>
         </ul>
     </nav>
     
